feat:增加字段关系管理的4个接口显示
